# Square

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/Source/Audio/: AudioClip.h  AudioManager.cpp  AudioManager.h
Engine/Source/Core/: Application.cpp  Application.h  GameInterface.cpp  GameInterface.h  NetworkMode.h  SceneManager.cpp  SceneManager.h  Script.cpp  Script.h  Timeline.cpp  Timeline.h  Window.cpp  Window.h
Engine/Source/EventHandler/: EventManager.cpp  EventManager.h
Engine/Source/Input/: Input.cpp  Input.h  InputEvent.h  KeyState.h
Engine/Source/Math/: Math.h  MathFunctions.h
Engine/Source/Memory/: Allocator.cpp  Allocator.h  PoolAllocator.cpp  PoolAllocator.h
Engine/Source/Networking/: Client.cpp  Client.h  NetworkManager.cpp  NetworkManager.h  NetworkProtocol.h  Server.cpp  Server.h  ServerInputManager.cpp  ServerInputManager.h
Engine/Source/Physics/: Physics.cpp  Physics.h  PhysicsTypes.h
Engine/Source/Renderer/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Renderer.cpp  Renderer.h
Engine/Source/Replay/: ReplayManager.cpp  ReplayManager.h
Engine/Source/UI/: Color.h  UIElement.h  UIManager.cpp  UIManager.h
Game/: CMakeLists.txt  S_001.square
Game/Resources/Data/: dialog.json
Game/Resources/Scenes/: level1.square  level2.square  level3.square  test.square
Game/Resources/Sprites/: final-boss.aseprite  gun.aseprite  lazar.aseprite
Game/Source/: DialogManager.cpp  DialogManager.h  EnemyManager.cpp  EnemyManager.h  GameApp.cpp  GameStateManager.cpp  GameStateManager.h  MainBehavior.cpp  MainBehavior.h  Map.cpp  Map.h  Player.cpp  Player.h  PlayerAttacks.cpp  PlayerKeybinds.h  Properties.h  UserInterface.cpp  UserInterface.h
Scripts/: Setup-Linux.sh  Setup-Windows.bat
